[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://scripts/Touch_contorl_field.gd" type="Script" id=2]
[ext_resource path="res://scripts/Button.gd" type="Script" id=3]
[ext_resource path="res://resources/sprites/down.png" type="Texture" id=4]
[ext_resource path="res://scripts/Button_toggle.gd" type="Script" id=5]

[sub_resource type="CapsuleShape" id=4]
radius = 0.4
height = 1.4

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Head:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 1.77832, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 1.09941, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "sit"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Head:translation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 1.77832, 0 ), Vector3( 0, 0.827423, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape:translation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 1.09941, 0 ), Vector3( 0, 0.549359, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ), Vector3( 1, 1, 0.5 ) ]
}

[node name="Player" type="KinematicBody"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1.09941, 0 )
shape = SubResource( 4 )

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.77832, 0 )

[node name="Camera" type="Camera" parent="Head"]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0 )
keep_aspect = 0
current = true
fov = 80.0
far = 300.0

[node name="Sign_ray" type="RayCast" parent="Head"]
enabled = true
cast_to = Vector3( 0, 0, 3 )
collision_mask = 8

[node name="Center" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_top = 225.0
margin_right = 4.0
margin_bottom = 229.0
rect_rotation = 45.0
rect_pivot_offset = Vector2( 2, 2 )
color = Color( 0.980392, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rotate_control" type="Control" parent="." groups=["Touch_controls"]]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -408.0
margin_top = -450.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Move_control" type="Control" parent="." groups=["Touch_controls"]]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -450.0
margin_right = 400.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_sit" type="TextureRect" parent="." groups=["Touch_controls"]]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -368.0
margin_top = -114.0
margin_right = -299.0
margin_bottom = -47.0
rect_pivot_offset = Vector2( 34, 33 )
focus_mode = 1
texture = ExtResource( 4 )
expand = true
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_jump" type="TextureRect" parent="." groups=["Touch_controls"]]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -280.0
margin_top = -114.0
margin_right = -211.0
margin_bottom = -47.0
rect_rotation = 180.0
rect_pivot_offset = Vector2( 34, 33 )
focus_mode = 1
texture = ExtResource( 4 )
expand = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/sit = SubResource( 3 )

[node name="Info" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -128.0
margin_bottom = 32.0
__meta__ = {
"_edit_use_anchors_": false
}
